Remove the crutch